Fixed some broken test cases

--- a/Phase 2/test_collisions.html
+++ b/Phase 2/test_collisions.html
@@ -315,8 +315,7 @@
     <pre class="prettyprint" style="text-align: left;"><code>    var node16_1 = {"x": 176, "y": 96, "rowWidth": 128, "totalheight": 128};
     var node16_2 = {"x": 304, "y": 96, "rowWidth": 64, "totalheight": 128};
     var node16_3 = {"x": 112, "y": 96, "rowWidth": 64, "totalheight": 128};
-    return isCollidingNN(node16_1, node16_2) && isCollidingNN(node16_1, node16_3) &&
-           isCollidingNN(node16_2, node16_3);</code></pre>
+    return isCollidingNN(node16_1, node16_2) && isCollidingNN(node16_1, node16_3);</code></pre>
     <p>Expected: <span style="color: blue">TRUE</span>
     <p id="test_16"></p>
 
@@ -337,8 +336,7 @@
     <pre class="prettyprint" style="text-align: left;"><code>    var node17_1 = {"x": 176, "y": 96, "rowWidth": 128, "totalheight": 128};
     var node17_2 = {"x": 176, "y": 32, "rowWidth": 128, "totalheight": 64};
     var node17_3 = {"x": 176, "y": 224, "rowWidth": 128, "totalheight": 64};
-    return isCollidingNN(node17_1, node17_2) && isCollidingNN(node17_1, node17_3) &&
-           isCollidingNN(node17_2, node17_3);</code></pre>
+    return isCollidingNN(node17_1, node17_2) && isCollidingNN(node17_1, node17_3);</code></pre>
     <p>Expected: <span style="color: blue">TRUE</span>
     <p id="test_17"></p>
 
