--- a/Phase 2/test_collisions.html
+++ b/Phase 2/test_collisions.html
@@ -764,17 +764,17 @@
     <svg xmlns="http://www.w3.org/2000/svg" 
 	    width="480" height="320" version="1.1">
     	<rect x="0" y="0" width="480" height="320" fill="white" stroke="black" stroke-width="2"></rect>
-    	<path d="M 120 160 H 360" fill="none" stroke="blue" stroke-width="4"></path>
-    	<path d="M 120 160 H 360" fill="none" stroke="blue" stroke-width="2"></path>
-	<circle cx="120" cy="160" r="4" fill="white" stroke="blue" stroke-width="1"></circle>
-	<circle cx="360" cy="160" r="4" fill="white" stroke="blue" stroke-width="1"></circle>
-	<circle cx="120" cy="160" r="2" fill="white" stroke="blue" stroke-width="0.5"></circle>
-	<circle cx="360" cy="160" r="2" fill="white" stroke="blue" stroke-width="0.5"></circle>
+    	<path d="M 120 160 H 360" fill="none" stroke="red" stroke-width="4"></path>
+    	<path d="M 120 160 H 360" fill="none" stroke="red" stroke-width="2"></path>
+	<circle cx="120" cy="160" r="4" fill="white" stroke="red" stroke-width="1"></circle>
+	<circle cx="360" cy="160" r="4" fill="white" stroke="red" stroke-width="1"></circle>
+	<circle cx="120" cy="160" r="2" fill="white" stroke="red" stroke-width="0.5"></circle>
+	<circle cx="360" cy="160" r="2" fill="white" stroke="red" stroke-width="0.5"></circle>
     </svg>
     <pre class="prettyprint" style="text-align: left;"><code>    var edgeH2_1 = {"points": [[240, 160], [240, 160]]};
     var edgeH2_2 = {"points": [[120, 160], [360, 160]]};
     return isOverlappingEE(nodeH2_1, edgeH2_2);</code></pre>
-    <p>Expected: <span style="color: blue">FALSE</span>
+    <p>Expected: <span style="color: blue">TRUE</span>
     <p id="test_H2"></p>
 
     <h3 id="id_H3">H3</h3>
