fixed some things and robustified optimizeNetworkToGrid with backup plans in case it fails the first time

--- a/Phase 3/index.html
+++ b/Phase 3/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
-  <body onload="networkOptimization('survey.json', 'output.json', [960, 560], 4)">
+  <body onload="networkOptimization('survey.json', 'output.json', [960, 560], 4, 100)">
     <div id="main_box">
       <div id="container">
         <canvas id="maincanvas" width="960px" height="560px"></canvas>
