--- a/Phase 3/index.html
+++ b/Phase 3/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
-  <body onload="networkOptimization('survey.json', 'output.json', [960, 560], 4, 100)">
+  <body onload="networkOptimization('survey.json', 'output.json', [960, 560], 4, 100, render, 'output.json')">
     <div id="main_box">
       <div id="container">
         <canvas id="maincanvas" width="960px" height="560px"></canvas>
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.9.25/paper-full.min.js"></script>
     <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="draw.js"></script>
   </body>
 
 </html>
