--- a/Phase 3/z_alt_1.html
+++ b/Phase 3/z_alt_1.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
-  <body onload="networkOptimization('survey.json', 'a.json', '', [960, 560], 4, 100, render, 'a.json')">
+  <body onload="networkOptimization('z_alt_1.json', 'a.json', '', [960, 560], 4, 100, render, ['a.json', 'z_alt_1.json'])">
     <div id="main_box">
       <p>Notes on test:<br>1. Uses a very simple set of questions</p>
       <div id="container">
